# HelloWorld

./: CMakeLists.txt  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  HelloWorldProject.sln  QT_Version.reg  configure-qt.ps1
.github/workflows/: msbuild.yml
QtMsBuild/: Qt.props  qt.targets  qt5.natvis.xml  qt6.natvis.xml  qt_defaults.props  qt_globals.targets  qt_inner.targets  qt_private.props  qt_settings.targets  qt_settings.xml  qt_tasks.targets  qt_vars.targets
QtMsBuild/deploy/: qt_import.props  qtdeploy.props  qtdeploy.targets  qtdeploy.xml
QtMsBuild/moc/: qt_import.props  qtmoc.props  qtmoc.targets  qtmoc.xml  qtmoc_cl.targets  qtmoc_v3.xml
QtMsBuild/qml/: qt_import.props  qtqml.props  qtqml.targets  qtqml_cache.props  qtqml_cache.targets  qtqml_static.props  qtqml_static.targets
QtMsBuild/rcc/: qt_import.props  qtrcc.props  qtrcc.targets  qtrcc.xml  qtrcc_cl.targets  qtrcc_v3.xml
QtMsBuild/repc/: qt_import.props  qtrepc.props  qtrepc.targets  qtrepc.xml  qtrepc_cl.targets  qtrepc_v3.xml
QtMsBuild/translation/: qt_import.props  qttranslation.props  qttranslation.targets  qttranslation.xml
QtMsBuild/uic/: qt_import.props  qtuic.props  qtuic.targets  qtuic.xml  qtuic_v3.xml
